# Smart-Personal-Colour-Analysis-System

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  SECURITY_AND_PRIVACY.md  SMART_PERSONAL_COLOUR_ANALYSIS_MASTER_PROMPT.md  TESTING_STRATEGY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/analysis/: __init__.py  pipeline.py  types.py
apps/api/app/analysis/classification/: seasons.py  undertone.py
apps/api/app/analysis/colour_features/: ciede2000.py  conversions.py
apps/api/app/analysis/confidence/: scoring.py
apps/api/app/analysis/explainability/: generate.py
apps/api/app/analysis/face_detection/: detector.py
apps/api/app/analysis/landmarks/: geometry.py
apps/api/app/analysis/preprocessing/: validation.py
apps/api/app/core/: classifier.py  config.py  db.py  errors.py  logging.py  request_context.py
apps/api/app/repositories/: analyses.py  palettes.py  products.py
apps/api/app/schemas/: analysis.py  common.py  health.py
apps/api/app/security/: auth.py  jwt.py  rate_limit.py
apps/api/app/services/: analysis_mapper.py  csv_import.py  product_ranking.py  storage.py
apps/api/models/: README.md
apps/api/tests/: conftest.py  fixtures.py  test_ciede2000.py  test_classifier_config.py  test_classifiers.py  test_colour_conversions.py  test_config.py  test_csv_import.py  test_errors.py  test_face_pipeline.py  test_full_analysis.py  test_hardening.py  test_health.py  test_jwt.py  test_preprocessing.py  test_preview_quality_api.py  test_product_ranking.py  test_quality_metrics.py
apps/api/tests/integration/: conftest.py  test_admin_api.py  test_analyses_api.py  test_auth_api.py  test_palettes_api.py  test_products_api.py
(+184 files in other folders)
